# HPLS-HFCN-openset

./: .gitignore  CMakeLists.txt  FC_model_  HPLS_openset_feat.py  HPLS_openset_load.py  HSVM_openset_load.py  README.md  SVM_openset_feat.py
bash/: run_HPLS_pubfig83_load.sh  run_HPLS_vggface_load.sh  run_HSVM_vggface_load.sh
cpp/cvtools/: cluster.hpp  dist.cpp  dist.hpp  feats.cpp  feats.hpp  norm.cpp  norm.hpp  regression.cpp  util.cpp
cpp/plsh/: main.cpp
cvtools/: classifier.cpp  classifier.hpp  cluster.cpp  regression.hpp  tasks.cpp  tasks.hpp  util.hpp
datasets/frgcv1/: frgc_set_4.txt  frgc_test_2.txt
datasets/pubfig83/: pubfig83_set.txt
datasets/vggface/: download_vgg_face_dataset.py
features/: extract_features.py
libsvm-3.21/: Makefile.win
libsvm-3.21/windows/: libsvm.exp  train_example_data.txt.model
plsh/: program.h
python/: HFCN_openset_load.py  HPLS_closedset_feat.py  HPLS_openset_feat.py  HPLS_openset_load.py  HSVM_openset_load.py  auxiliar.py  classes.py  descriptor.py  descriptor_aux.py  individual_eval.py  main.py  main_openset.py  main_openset_fc.py  main_openset_load.py  main_temp.py  metrics.py  models.py  plot_files.py  pls_classifier.py  script_frgc.sh  script_frgc_01.sh  script_frgc_05.sh  script_frgc_09.sh  script_frgc_df_01.sh  script_frgc_df_09.sh  script_frgc_hog_01.sh  script_frgc_hog_05.sh  script_frgc_hog_09.sh  script_pubfig83.sh  vggface.py
python/bash/: run_HFCN_frgc_load.sh  run_HFCN_pubfig83_load.sh  run_HFCN_vggface_load.sh  run_HPLS_frgc_load.sh  run_HPLS_frgc_trunk.sh  run_HPLS_pubfig83_load.sh  run_HPLS_pubfig83_trunk.sh  run_HPLS_pubfig83_vmais.sh  run_HPLS_vggface_load.sh  run_HSVM_frgc_load.sh  run_HSVM_pubfig83_load.sh  run_frgc.sh  run_pubfig.sh  run_vggface.sh  script_features_df.sh  script_features_df_01.sh  script_features_df_05.sh  script_features_df_09.sh  script_features_fc_01.sh  script_features_fc_05.sh  script_features_fc_09.sh  script_frgc_df_01.sh  script_frgc_df_05.sh  script_frgc_df_09.sh  script_frgc_hog_01.sh  script_frgc_hog_05.sh  script_frgc_hog_09.sh  script_frgc_load.sh  script_pubfig83.sh  script_pubfig83_01.sh  script_pubfig83_05.sh  script_pubfig83_09.sh  script_pubfig83_load.sh  script_vggface_df_01.sh  script_vggface_df_05.sh  script_vggface_df_09.sh  script_vggface_hog_01.sh  (+3 more)
scripts/: deep_hashing.py  plot_hashing.py  plot_mat_roc.py
sklearn modified/: __init__.py
(+35 files in other folders)
